Shorten questions of the quiz game and change quiz card box position to avoid overlaps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,7 @@ a {
     width: 50rem;
     max-width: 80%;
     border-radius: 5px;
+    margin-top: 40px;
     padding: 10px 20px;
     box-shadow: 0 0 10px 2px;
     background-color: var(--hue);
